fix overflow

--- a/assets/scss/common/common.scss
+++ b/assets/scss/common/common.scss
@@ -9,6 +9,9 @@ html,
 body {
   scroll-behavior: smooth;
 }
+.wrapper {
+  overflow: hidden;
+}
 .container-menu,
 .container {
   max-width: 1700px;
